<resources>
    <string name="app_name">Fitbo</string>
    <string name="title_today">Today</string>
    <string name="title_suggestion">Suggestion</string>
    <string name="title_notifications">History</string>
    <string name="title_results">Results</string>
    <string name="title_exercise">Exercise</string>

    <string name="my_preferences">My Preferences</string>
    <string name="start">Start</string>
    <string name="start_run">Start Run</string>
    <string name="start_walk">start walk</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="update_weight">Update weight</string>
    <string name="update_steps_target">Update target</string>
    <string name="set_daily_step_target">set daily step target</string>




    <string name="steps_today">%1$d steps today</string>
    <string name="steps_today_no_number">steps</string>
    <string name="steps">%1$s steps</string>
    <string name="steps_multiline">%1$s\nsteps</string>

    <string name="kcal">%1$s kcal</string>
    <string name="kcal_burnt">%1$s kcal burnt</string>

    <string name="calories">%1$s calories</string>
    <string name="calories_burnt">%1$s calories burnt</string>

    <string name="today_page_calories"> %1$s \ncalories</string>
    <string name="today_page_calories_burnt"> %1$s \ncalories burnt</string>

    <string name="km">%1$s km</string>
    <string name="distance_covered">%1$s km covered</string>
    <string name="metres">%1$d metres</string>

    <string name="today_page_km"> %1$s \nkm</string>



    <string name="step_count">Steps Count</string>

    <!--Content description -->
    <string name="daily_graph_content_description">Daily activity graph</string>
    <string name="running_man_content_description">Gif of a running man</string>
    <string name="step_target_graph_content_description">daily step target prgress pie chart</string>
    <string name="weight_kg_et_description">type weight in kilograms</string>
    <string name="set_daily_step_target_et_description">type daily step target</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">loading..</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="degree">°C</string>

    <!--Exercise results -->
    <string name="well_done_champ">Well done Champ!\nThese are your stats</string>
    <string name="mins_seconds">%1$s mins %2$s sec</string>


    <!--Weather strings -->
    <string name="feels_like">"It feels like %1$s  °C"</string>


    <!--History page -->
    <string name="stats_since_boot"> Stats since you last \n switched on your phone</string>

    <!-- Toast -->
    <string name="cannot_exit_run">Cannot exit. Exercise in progress.</string>
    <string name="set_correct_weight">Weight not set. Set weight between 20 and 200kg</string>
    <string name="weight_set">Weight changed to %1$s</string>

    <string name="set_correct_target">Steps not set. set steps above 100</string>
    <string name="daily_target_set">daily target changed to %1$s</string>
    <string name="weight_kg">Weight in kilograms</string>

    <string name="weight">Weight</string>
    <string name="daily_target">Set daily target</string>
    <string name="target">daily steps target</string>

    <!-- Weather suggestions -->
    <string name="weather_today">%1$s weather today</string>
    <string name="our_suggestion"> Suggestions For Today</string>
    <string name="cold_exercise_suggestions">It is cold in %1$s. Here are some exercises we could suggest \n
    - %2$s \n
    - %3$s \n
    - %4$s \n
    - %5$s \n
    - %6$s</string>

    <string name="warm_exercise_suggestions">It is cold in %1$s. Here are some exercises we could suggest \n
    - %2$s \n
    - %3$s \n
    - %4$s \n
    - %5$s \n
    - %6$s</string>

    <string name="vantaa">Vantaa</string>
    <string name="temperature">%1$s °C</string>
    <string name="wind">Wind: %1$s m/s %2$s</string>
    <string name="visibility">Visibility: %1$s km</string>


    <!--Exercises-->
    <!--Rainy-->
    <string name="go_swimming">Go swimming</string>
    <string name="do_gym">Do some exercise in the gym</string>
    <string name="enjoy_badminton">enjoy indoor badminton</string>
    <string name="dance_lesson">"Go for dance lesson"</string>
    <string name="indoor_sports">"Take part in indoor sport activities"</string>

    <!--snow-->
    <string name="indoor_football">You can enjoy indoor football</string>
    <string name="wall_climbing">Go for wall climbing</string>
    <string name="table_tennis">you can play table tennis</string>


    <!--summer-->
    <string name="outdoor_football">You can enjoy outdoor football</string>
    <string name="outdoor_swim">Go for outdoor swimming</string>
    <string name="forest_run">Go for running in the forest</string>
    <string name="beach_football">You can go to beach football</string>

    <!--<string name=""></string>-->

</resources>
