<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pokumars.fitbo.ui.today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today" >
        <action
            android:id="@+id/action_navigation_home_to_runFragment"
            app:destination="@id/runFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_suggestion"
        android:name="com.pokumars.fitbo.ui.suggestion.SuggestionFragment"
        android:label="@string/title_suggestion"
        tools:layout="@layout/fragment_suggestion" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.pokumars.fitbo.ui.history.HistoryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/runFragment"
        android:name="com.pokumars.fitbo.ui.run.RunFragment"
        android:label="fragment_run"
        tools:layout="@layout/fragment_run" >
        <action
            android:id="@+id/action_runFragment_to_endExerciseFragment"
            app:destination="@id/endExerciseFragment" />
    </fragment>
    <fragment
        android:id="@+id/endExerciseFragment"
        android:name="com.pokumars.fitbo.ui.endexercise.EndExerciseFragment"
        android:label="fragment_end_exercise"
        tools:layout="@layout/fragment_end_exercise" >
        <argument
            android:name="numSteps"
            app:argType="string" />
        <argument
            android:name="numKilometres"
            app:argType="string" />
        <argument
            android:name="numKCal"
            app:argType="string" />
    </fragment>
</navigation>